<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F5F3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarTipInfo"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="@color/nextBt"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0px"
            android:layout_height="0px"
            android:gravity="center"
            android:text="@string/trip_detalis"
            android:textColor="@color/realWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/toolbarTipInfo"
            app:layout_constraintLeft_toLeftOf="@id/toolbarTipInfo"
            app:layout_constraintRight_toRightOf="@id/toolbarTipInfo"
            app:layout_constraintTop_toTopOf="@id/toolbarTipInfo" />


        <TextView
            android:id="@+id/textDetalis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:maxLines="1"
            android:minLines="1"
            android:text="@string/detalis_info"
            android:textColor="@color/realBlack"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarTipInfo" />

        <TextView
            android:id="@+id/baggage_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/baggage_trip"
            android:textColor="@color/gray_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDetalis" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesBaggage"
            style="@style/yesBtnStyle"
            android:text="@string/yes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/baggage_trip" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noBaggage"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_margin="20sp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="#4D000000"
            android:background="@drawable/little_white_circle_bt_bg"
            app:layout_constraintLeft_toRightOf="@id/yesBaggage"
            app:layout_constraintTop_toBottomOf="@id/baggage_trip" />

        <TextView
            android:id="@+id/animals_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/animals_trip"
            android:textColor="@color/gray_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yesBaggage" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesAnimals"
            style="@style/yesBtnStyle"
            android:text="@string/yes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animals_trip" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noAnimals"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_margin="20sp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="#4D000000"
            android:background="@drawable/little_white_circle_bt_bg"
            app:layout_constraintLeft_toRightOf="@id/yesAnimals"
            app:layout_constraintTop_toBottomOf="@id/animals_trip" />


        <TextView
            android:id="@+id/smoeke_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/smoke_trip"
            android:textColor="@color/gray_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yesAnimals" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesSmoke"
            style="@style/yesBtnStyle"
            android:text="@string/yes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smoeke_trip" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noSmoke"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_margin="20sp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="#4D000000"
            android:background="@drawable/little_white_circle_bt_bg"
            app:layout_constraintLeft_toRightOf="@id/yesSmoke"
            app:layout_constraintTop_toBottomOf="@id/smoeke_trip" />

        <TextView
            android:id="@+id/trailer_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/trailer_trip"
            android:textColor="@color/gray_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yesSmoke" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesTrailer"
            style="@style/yesBtnStyle"
            android:text="@string/yes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trailer_trip" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noTrailer"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_margin="20sp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="#4D000000"
            android:background="@drawable/little_white_circle_bt_bg"
            app:layout_constraintLeft_toRightOf="@id/yesTrailer"
            app:layout_constraintTop_toBottomOf="@id/trailer_trip" />

        <TextView
            android:id="@+id/comment_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/comment_trip"
            android:textColor="@color/realBlack"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yesTrailer" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:background="@drawable/comments_bg"
            android:gravity="left|top"

            android:hint="@string/comment_hint"
            android:minLines="5"
            android:padding="4dp"
            app:layout_constraintBottom_toTopOf="@id/nextBt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comment_trip" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBt"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:layout_margin="20sp"
            android:background="@drawable/next_bg"
            android:text="@string/dalee"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:elevation="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="12dp"
            android:padding="4dp"
            android:src="@drawable/ic_car_add_back"
            app:layout_constraintBottom_toBottomOf="@id/toolbarTipInfo"
            app:layout_constraintLeft_toLeftOf="@id/toolbarTipInfo"
            app:layout_constraintTop_toTopOf="@id/toolbarTipInfo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>