<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F5F3">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/nextBt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0px"
        android:layout_height="0px"
        android:gravity="center"
        android:text="@string/autoCar"
        android:textColor="@color/realWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/toolbarCar"
        app:layout_constraintLeft_toLeftOf="@id/toolbarCar"
        app:layout_constraintRight_toRightOf="@id/toolbarCar"
        app:layout_constraintTop_toTopOf="@id/toolbarCar" />


    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:padding="4dp"
        android:src="@drawable/ic_car_add_back"
        app:layout_constraintBottom_toBottomOf="@id/toolbarCar"
        app:layout_constraintLeft_toLeftOf="@id/toolbarCar"
        app:layout_constraintTop_toTopOf="@id/toolbarCar" />

    <TextView
        android:id="@+id/yourCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/your_car"
        android:textColor="@color/realBlack"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarCar" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintTop_toBottomOf="@id/yourCar"
        app:layout_constraintVertical_bias=".01"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/add_another"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/login_drawable"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/add_another_car"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/listView"
        app:layout_constraintVertical_bias=".01" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBt"
        android:layout_width="0dp"
        android:layout_height="?android:actionBarSize"
        android:layout_margin="15dp"
        android:background="@drawable/next_bg"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/realWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/icon_clue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:src="@drawable/ic_clue"
        app:layout_constraintBottom_toTopOf="@id/nextBt"
        app:layout_constraintLeft_toLeftOf="@id/nextBt" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/descriptionClue"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/icon_clue"
        app:layout_constraintLeft_toRightOf="@id/icon_clue"
        app:layout_constraintRight_toRightOf="@id/nextBt"
        app:layout_constraintTop_toTopOf="@+id/icon_clue" />


</androidx.constraintlayout.widget.ConstraintLayout>